♻  update : Fix contact compoent layout issues

--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -8,7 +8,7 @@
     }
     .custom-control{
         width: 100%;
-        height: 56px;
+        height: 55px;
         border-radius: 0;
         color: $primary-color;
         background-color: transparent;
